# arduino_esp32_v3_0_0

./: .gitignore  boards.txt  create_release.ps1  installed.json  platform.txt
cores/esp32/: core_version.h
docs/: conf.py  index.rst  lib_build.md  requirements.txt
docs/api/: button.md
docs/source/api/: rgb.md  wifi.md
docs/source/examples/: button.md  display.md  sensors.md
libraries/DFRobot_Mindplus_MPython/: keywords.txt  library.properties
libraries/DFRobot_Mindplus_MPython/docs/: api_reference.md  examples.md
libraries/DFRobot_Mindplus_MPython/docs/api/: display.md  sensors.md  touchpad.md
libraries/DFRobot_Mindplus_MPython/docs/examples/: button.md  rgb.md
libraries/DFRobot_Mindplus_MPython/docs/source/: README.md  arduino_setup.md  conf.py
libraries/DFRobot_Mindplus_MPython/examples/HelloWorld/: HelloWorld.ino
libraries/DFRobot_Mindplus_MPython/src/: MPython.cpp  MPython.h
libraries/DFRobot_Mindplus_MPython/temp/: simple_dec.c
libraries/DFRobot_Mindplus_MPython/temp/esp-gmf/elements/gmf_video/: CMakeLists.txt  idf_component.yml
libraries/DFRobot_Mindplus_NeoPixel/: config.json  library.properties
libraries/FS/: library.properties
libraries/HTTPClient/: library.properties
libraries/LittleFS/: library.properties
libraries/Network/: library.properties
libraries/NetworkClientSecure/: library.properties
libraries/WiFi/: library.properties
libraries/Wire/: library.properties
tools/: makeimg.py
tools/partitions/: mpython_v3_16MiB.csv
variants/labplus_mpython_v3/: pins_arduino.h
(+282 files in other folders)
